Fix tạo khóa học, module theo kỹ năng